--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -30,4 +30,4 @@ jobs:
         run: npm ci
 
       - name: Build on EAS
-        run: eas build --platform all --non-interactive --no-wait
+        run: eas build --platform android --non-interactive --no-wait
