--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm ci
 
       - name: Build on EAS
-        run: eas build --platform android --non-interactive --no-wait
+        run: NODE_ENV=dev eas build --platform android --non-interactive --no-wait
 
   local-build-android:
     name: Local Build Android
@@ -53,7 +53,7 @@ jobs:
 
       - name: Build android app
         run: |
-          eas build --local \
+          NODE_ENV=dev eas build --local \
           --non-interactive \
           --output=./app-build.apk \
           --platform=android 
