--- a/app.json
+++ b/app.json
@@ -44,7 +44,13 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#ffffff",
+          "dark": {
+            "image": "./assets/images/splash-icon.png",
+            "backgroundColor": "#000000",
+            "resizeMode": "contain",
+            "imageWidth": 200
+          }
         }
       ],
       [
