Update splash icon, allow landscape orientation

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "CARDINAL GATE",
     "slug": "cardinal-gate-react-native",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
@@ -58,6 +58,12 @@
         {
           "configureAndroidBackup": true,
           "faceIDPermission": "Allow $(PRODUCT_NAME) to access your Face ID biometric data as well as shame you for your life choices."
+        }
+      ],
+      [
+        "expo-screen-orientation",
+        {
+          "initialOrientation": "DEFAULT"
         }
       ]
     ],
