--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-image": "~2.0.5",
+    "expo-checkbox": "~4.0.1",
+    "expo-sharing": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
